src/bbtautau/kubernetes/setup/http/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bbtautauserverdep
  labels:
    run: bbtautauserver
spec:
  replicas: 1
  selector:
    matchLabels:
      run: bbtautauserver
  template:
    metadata:
      labels:
        run: bbtautauserver
    spec:
      containers:
      - name: bbtautauserverdep
        image: ondh/nginx-fancyindex
        resources:
           limits:
             memory: 200Mi
             cpu: "1"
           requests:
             memory: 50Mi
             cpu: 50m
        workingDir: /bbtautauvol
        volumeMounts:
        - mountPath: /bbtautauvol
          name: bbtautauvol
        - name: bbtautau-nginx-conf
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: bbtautauvol
        persistentVolumeClaim:
          claimName: bbtautauvol
      - name: bbtautau-nginx-conf
        configMap:
          name: bbtautau-nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/region
                operator: In
                values:
                - us-west
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                  - suncave-17
