src/bbtautau/kubernetes/setup/http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: bbtautauingress
spec:
  rules:
  - host: bbtautau.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: bbtautausexpose
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - bbtautau.nrp-nautilus.io
